# thvote-be-re

./: .dockerignore  .env  .env.example  .env.nacos.example  .env.prod.example  .env.test.example  .flake8  .gitignore  .pylintrc  .tmp_cand_char.sql  .tmp_candidates.sql  Dockerfile  Makefile  QUICKSTART.md  README.md  REFACTOR_TODO.md  alembic.ini  check_python.py  commit_msg.txt  config.py  connect_db.sh  database.py  main.py  mypy.ini  nacos-config-thvote-be.json  pyproject.toml  requirements.txt  test_nacos.py
.github/: PR_DRAFT_user_and_verify.md
.github/workflows/: deploy-prod.yml  deploy-test.yml  deploy.yml  main.yml  pylint.yml
.qn-preview/: index.html
admin-ui/: README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
admin-ui/src/: App.vue  router.ts  styles.css
alembic/: env.py
alembic/versions/: 0001_initial_user_and_activity_log.py  0002_voting_tables.py  0003_candidate_and_final_ranking.py  0004_sso_columns.py  0005_reconcile_user_columns.py  0006_sync_run_log_and_raw_work.py  0007_dojin_nomination.py  0008_questionnaire_structure.py  0009_candidate_merge.py  0010_questionnaire_freeform.py  0011_user_register_device_id.py  0012_raw_submit_fill_duration.py  0013_raw_submit_client_env.py  0014_admin_monitor_support.py  0015_questionnaire_semantic_code.py  12a5f2e6dbed_voteable_cross_year_stable_id.py
api/graphql/: schema.py  types.py
app_router/: login.py  submit.py
apps/autocomplete/: router.py  service.py
apps/result/: dao.py  router.py  schemas.py  service.py
apps/scraper/: dao.py  process.py  router.py  schemas.py  service.py
apps/submit/: __init__.py  dao.py  models.py  router.py  schemas.py  service.py
apps/user/: dao.py  models.py  router.py  schemas.py  service.py
apps/vote_data/: dao.py  models.py  (+2 more)
common/: __init__.py  container.py  database.py
dao/: CPSubmit.py  CompletionRatesQuery.py  RegisterData.py  SingleQuery.py  TrendItem.py  __init__.py  submit_models.py
db_model/: __init__.py  character.py  cp.py  music.py  questionnaire.py  user.py
deprecated/: README.md
docker/: .env.example  DOCKER_README.md  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  test-env.sh
docs/: BACKLOG.md  CHANGELOG.md  README.md  REFACTOR_TODO.md  VoileLabs-人气投票项目-需求文档-投票系统.md  VoileLabs-人气投票项目-需求文档-投票结果页面.md  architecture.md  migration-plan.md
frontend/: Dockerfile  Dockerfile.prod  Dockerfile.test
local_db/: dev.db
scripts/: bson_to_sql.py  extract_whitelist.mjs  import_mongo_dump.py  nacos_client.py  sync_from_mongodb.py  test_nacos.py  test_nacos_http.py
services/: rate_limit.py  submit_service.py  submit_validator.py
src/: __init__.py  main.py
tests/: conftest.py
(+468 files in other folders)
