[project]
name = "thvote-be-re"
version = "0.2.0"
description = "THVote Backend - Python refactored version"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic",
    "pydantic-settings",
    "sqlalchemy",
    "asyncpg",
    "asyncmy",
    "aiosqlite",
    "redis",
    "aioredis",
    "redis-om",
    "PyJWT",
    "python-dotenv",
    "pytest",
    "pytest-asyncio",
    "strawberry-graphql[fastapi]>=0.219.0",
    "dependency-injector>=4.41.0",
]

[tool.isort]
profile = "black"
line_length = 88

[tool.black]
line-length = 88

[tool.setuptools.packages.find]
where = ["."]
include = [
    "common*",
    "apps*",
    "api*",
]
exclude = [
    "local_db*",
    ".github*",
    ".idea*",
    "tests*",
]
