[project]
name = "thvote-be-re"
version = "0.2.0"
description = "THVote Backend - Python refactored version"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.12.0",
    "pydantic-settings>=2.13.0",
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.29.0",
    "asyncmy>=0.2.0",
    "aiosqlite>=0.20.0",
    "redis>=5.0.0",
    "aioredis>=2.0.0",
    "redis-om>=0.4.0",
    "PyJWT>=2.8.0",
    "python-dotenv>=1.0.0",
    "email-validator>=2.0.0",
    "httpx>=0.27.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "strawberry-graphql[fastapi]>=0.219.0",
    "dependency-injector>=4.41.0",
    "bcrypt>=4.0.0",
    "argon2-cffi>=23.1.0",
    "starlette>=0.40.0",
    "nacos-sdk-python>=2.0.0",
    "alembic>=1.13.0",
    "alibabacloud-dypnsapi20170525>=2.0.0",
    "alibabacloud-tea-openapi>=0.3.0",
    "lxml>=5.0.0",
    "aiohttp>=3.9",
]

[project.optional-dependencies]
test = [
    "freezegun>=1.5.0",
    "fakeredis>=2.20.0",
    "pytest-cov>=5.0.0",
]

[tool.isort]
profile = "black"
line_length = 88

[tool.black]
line-length = 88

[tool.setuptools.packages.find]
where = ["."]
include = [
    "src*",
]
exclude = [
    "local_db*",
    ".github*",
    ".idea*",
    "tests*",
]
